--- a/style.css
+++ b/style.css
@@ -29,8 +29,9 @@ body {
   -webkit-text-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
   -ms-text-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
   text-shadow: 3px 3px 10px rgba(0, 0, 0, 1.9);
+  width:150px;
   margin: 1rem;
-  padding: 1rem 2.5rem;
+  padding: 1rem;
   font-size: 1rem;
   font-family: inherit;
   cursor: pointer;
